now u abel to add project and task

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,7 @@ $bootstrap-icons-font-dir: '~bootstrap-icons/font/fonts';
   cursor: pointer;
 }
 
-.badge {
+.badge.edit-isCompleted {
   cursor: pointer;
 }
 
