--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,6 +11,7 @@ $bootstrap-icons-font-dir: '~bootstrap-icons/font/fonts';
   overflow: hidden;
 }
 
+.projectsElement,
 .features-body > .card {
   cursor: pointer;
 }
